Added new helper method to clear a folder's content